--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,14 +2,14 @@
   "name": "server",
   "version": "1.0.0",
   "main": "./src/index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "start": "nodemon",
     "serve": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -25,6 +25,9 @@
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "sequelize": "^6.29.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   },
   "description": ""
 }
