--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,13 +8,14 @@
   "scripts": {
     "start": "nodemon",
     "serve": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --env.ENVIRONMENT=development --config webpack.config.dev.js",
+    "build": "webpack --env.ENVIRONMENT=production --config webpack.config.build.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
     "handlebars": "^4.7.7",
@@ -27,7 +28,10 @@
     "sequelize": "^6.29.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.19",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
   },
   "description": ""
 }
